--- a/apied_piper_server/package.json
+++ b/apied_piper_server/package.json
@@ -7,10 +7,11 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
   },
-  "author": "Angel Erick Cruz Olivera",
+  "author": "Jasson Antonio Espinosa Rodriguez",
   "license": "ISC",
   "dependencies": {
     "apied-piper": "^3.0.6",
-    "bcrypt": "^5.1.0"
+    "bcrypt": "^5.1.0",
+    "python": "^0.0.4"
   }
 }
