--- a/apied_piper_server/package.json
+++ b/apied_piper_server/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
   },
-  "author": "Angel Erick Cruz Olivera",
+  "author": "Jasson Espinosa",
   "license": "ISC",
   "dependencies": {
     "apied-piper": "^3.1.6"
